fixed bug in overflow of metadata

--- a/services/client/src/app/hymnal/hymnal.component.scss
+++ b/services/client/src/app/hymnal/hymnal.component.scss
@@ -16,6 +16,8 @@
     display: block;
     width: 100%;
     height: 100%;
+    max-height: 100%;
+    overflow: scroll;
   }
 }
 
